Stringjay strips whitespace. Need to fix html now.

--- a/libsrc/scss/common.scss
+++ b/libsrc/scss/common.scss
@@ -13,7 +13,8 @@ $right_padding: 12px;
 $left_column_width: 178px;
 $right_column_x: $left_padding + $left_column_width + $right_padding;
 
-@mixin calc-width($w: 100%) {
+@mixin calc-width($w: 100%, $fallback: 100%) {
+	width: $fallback;
     width: -moz-calc(#{$w});
     width: -webkit-calc(#{$w});
     width: calc(#{$w});
